add new feature

--- a/deploy/dev/.env.dev
+++ b/deploy/dev/.env.dev
@@ -1,4 +1,6 @@
 PORT=3000
-CONN_STR=mongodb://127.0.0.1:27017/cineflix
-USERNAME=admin
-PASSWORD=password
+CONN_STR=mongodb://localhost:27017/cineflix
+DB_USER_NAME=admin
+DB_PASSWORD=password
+
+NODE_ENV=development
