--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "import-db": "node ./data/import-dev-data.js --del && node ./data/import-dev-data.js --import"
   },
   "author": "",
   "license": "ISC",
